# visync

./: .gitignore  README.md  audit.txt  config.toml  identify_distros.toml  pyproject.toml
src/: __init__.py  download.py  finder.py  main.py  output.py  pm.py  verify.py
test/: test.py  test_cli.py  test_download.py  test_finder.py  test_identify.py  test_metadata.py  test_pm.py  test_verify.py  test_verify_cli.py
