[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visync"
version = "0.1.0"
description = "Ventoy ISO Synchronization Tool"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
visync = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
